@@ -31,6 +31,7 @@
 - TW-1729 zsh completion: zregexparse:4: not enough regex argument (thanks to
           Daniel Shahaf).
 - TW-1733 taskwarrior 2.5.0 can not compile FreeBSD 10.1 (thanks to ribbon).
+- TW-1734 calendar gives an error when context is set (thanks to Simon Michael).
 - TW-1735 context with no subcommand should do something (thanks to Simon
           Michael).
 - TW-1736 Error on detection of BOM in files.
